[package]
name = "httparena-wtx-grpc"
version = "0.1.0"
edition = "2024"

[build-dependencies]
pb-rs = { default-features = false, version = "0.10" }

[dependencies]
quick-protobuf = { default-features = false, version = "0.8" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["grpc-server", "http-server-framework", "optimizations", "optioned-server", "quick-protobuf", "tokio"], version = "0.47" }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
